// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/login/LoginController should match gitlab text and color props 1`] = `
<LoadingIk
  position="relative"
  style={Object {}}
/>
`;

exports[`components/login/LoginController should match openid text and color props 1`] = `
<LoadingIk
  position="relative"
  style={Object {}}
/>
`;

exports[`components/login/LoginController should match snapshot 1`] = `
<LoadingIk
  position="relative"
  style={Object {}}
/>
`;

exports[`components/login/LoginController should match snapshot when expired 1`] = `
<LoadingIk
  position="relative"
  style={Object {}}
/>
`;

exports[`components/login/LoginController should match snapshot when initializing 1`] = `
<LoadingScreen
  position="relative"
  style={Object {}}
/>
`;

exports[`components/login/LoginController should show session expiry notification 1`] = `
<LoadingIk
  position="relative"
  style={Object {}}
/>
`;

exports[`components/login/LoginController should suppress session expiry notification on sign in change 1`] = `
<LoadingIk
  position="relative"
  style={Object {}}
/>
`;
